frontend/assets/sass/nomad-ui.scss
// variables and mixins
@import "nomad-ui/variables";
@import "nomad-ui/mixins";

//plugins css
// @import "nomad-ui/plugins/animate";
// @import "nomad-ui/plugins/sweetalert2";

// @import "nomad-ui/plugins/jquery.jvectormap";
// @import "nomad-ui/plugins/bootstrap-table";
// @import "nomad-ui/plugins/datatables.net";
// @import "nomad-ui/plugins/fullcalendar";
// @import "nomad-ui/plugins/chartist";
// @import "nomad-ui/plugins/perfect-scrollbar";
// @import "nomad-ui/plugins/bootstrap-select";

// Core CSS
@import "nomad-ui/typography";
@import "nomad-ui/sidebar-and-main-panel";
@import "nomad-ui/buttons";
@import "nomad-ui/misc";
@import "nomad-ui/inputs";
// @import "nomad-ui/progress-bars";
// @import "nomad-ui/sliders";
@import "nomad-ui/forms";
// @import "nomad-ui/alerts";
@import "nomad-ui/tables";
// @import "nomad-ui/tags";
// @import "nomad-ui/tooltips-and-popovers";
// @import "nomad-ui/checkbox-radio-switch";
@import "nomad-ui/navbars";
// @import "nomad-ui/footers";

// Fancy Stuff
// @import "nomad-ui/social-buttons";
@import "nomad-ui/dropdown";
@import "nomad-ui/cards";
@import "nomad-ui/collapse";
// @import "nomad-ui/carousel";
// SCSS for Pages
// @import "nomad-ui/pages.scss";

// Responsive adjustments
@import "nomad-ui/responsive";
@import "nomad-ui/tabs-navs-pagination";

.wrapper{
    position: relative;
    top: 0;
    height: 100vh;

    &:after{
        display: table;
        clear: both;
        content: " ";
    }

    &.wrapper-full-page{
        height: auto;
        min-height: 100vh;
    }
}

.pointer {
	cursor: pointer;
}

dl {
	margin-bottom: 0;
}

.dotted {
	border-bottom: 1px dashed #999;
	text-decoration: none;
}

.no-border {
	border: none
}

.btn.no-border {
	padding: 0
}

.dropdown-menu:before {
	content: initial;
}

.dropdown-menu:after {
	content: initial;
}

.header .btn-group {
	padding-top: 15px;
}

.inline-pad {
	padding-left: 15px;
	padding-bottom: 15px;
}

.statistics-big {
	font-size: 150%
}

.expand-left-menu {
	top: 5px;
	right: 5px;
	position: absolute
}

.sidebar .sidebar-background {
	background-size: initial;
	background-position: initial;
}

